--- a/src/test/resources/allure.properties
+++ b/src/test/resources/allure.properties
@@ -1,1 +1,3 @@
 allure.results.directory=target/allure-results
+allure.link.issue.pattern=https://your-tracker.com/browse/{} 
+allure.link.tms.pattern=https://test-management.com/case/{} 
